--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,10 @@
 <h2>Latest posts:</h2>
+<br>
+<% @data_db.each do |post| %>
+  <p>
+    <%= post['content'] %>
+    <br>
+    <br>
+    Added at <%= post['created_date'] %>
+  </p>
+<% end %>
