--- a/views/details.erb
+++ b/views/details.erb
@@ -8,6 +8,15 @@
 </p>
 <br>
 <h4>Comments:</h4>
+<br>
+<% @comments.each do |comment| %>
+  <p>
+    <%= comment['content'] %>
+    <br>
+    <span style="font-size: 75%; color: #559">Added at <%= comment['created_date'] %></span>
+    <hr>
+  </p>
+<% end %>
 <p>
   <form action="/details/<%= @row['id'] %>" method="post" role="form">
     <textarea name="content" class="form-control" rows="3" placeholder="Type comment text here"></textarea>
