--- a/views/new.erb
+++ b/views/new.erb
@@ -2,6 +2,8 @@
 
 <p>
   <form action="/new" method="post" role="form">
+    <input type="text" name="author" class="form-control" placeholder="Author's name">
+    <br>
     <textarea name="content" class="form-control" rows="6" placeholder="Type post text here"></textarea>
     <br>
     <button type="submit" class="btn btn-primary">Submit</button>
