--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,7 @@
 
 <p>
   <form action="/new" method="post" role="form">
-    <input type="text" name="author" class="form-control" placeholder="Author's name">
+    <input type="text" name="author" class="form-control" value="<%= @author %>" placeholder="Author's name">
     <br>
     <textarea name="content" class="form-control" rows="6" placeholder="Type post text here"></textarea>
     <br>
